--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Note Taker
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="/">Notes
     </a>
   </nav>
   <div class="container">
