--- a/public/notes.html
+++ b/public/notes.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Note Taker
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="/">Notes
     </a>
     <div class="icons">
       <i class="fas fa-save text-light save-note"></i>
